--- a/Student_Portfolio.html
+++ b/Student_Portfolio.html
@@ -54,7 +54,7 @@
         <div class="Row" id="About">
             <!--Left column-->
             <div class="Column_2">
-                <img src="./images/email-gd749a105f_1280.PNG" alt="Email photo">
+                <img src="/images/email-gd749a105f_1280.PNG" alt="Email photo">
             </div>
             <!--Right column-->
             <div class="Column_1">
@@ -82,7 +82,7 @@
             </div>
             <!--Right column-->
             <div class="Column_2">
-                <a href="https://github.com/SulaymaanShahed" target="_blank"><img src="./images/github.PNG" alt="GitHub Logo"></a>
+                <a href="https://github.com/SulaymaanShahed" target="_blank"><img src="/images/github.PNG" alt="GitHub Logo"></a>
             </div>
         </div>
 
@@ -90,7 +90,7 @@
         <div class="Row" id="Contact">
             <!--Contact image, left column-->
             <div class="Column_2 Column_tall">
-                <img src="./images/pexels-markus-winkler-4159962.JPG" alt="Contact Image">
+                <img src="/images/pexels-markus-winkler-4159962.JPG" alt="Contact Image">
             </div>
             <!--Contact form, right column-->
             <div class="Column_1 Column_tall">
@@ -111,7 +111,7 @@
         <!--Footer section-->
         <footer>
             <p>
-                <p class="center">&copy Prosper Consulting Inc., <a href="https://www.learncodinganywhere.com/" target="_blank">The Tech Academy</a></p>
+                <p class="center"&copy;> Prosper Consulting Inc., <a href="https://www.learncodinganywhere.com/" target="_blank">The Tech Academy</a></p>
                 <br>
             </p>
         </footer>
