--- a/Student_Portfolio.html
+++ b/Student_Portfolio.html
@@ -82,7 +82,7 @@
             </div>
             <!--Right column-->
             <div class="Column_2">
-                <a href="https://github.com/SulaymaanShahed" target="_blank"><img id="githublogo" src="images/github.PNG" alt="GitHub Logo"></a>
+                <a href="https://github.com/SulaymaanShahed" target="_blank"><img id="githublogo" src="images/github.png" alt="GitHub Logo"></a>
             </div>
         </div>
 
