--- a/Student_Portfolio.html
+++ b/Student_Portfolio.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width" />
         <title>Sulaymaan Shahed</title>
-        <link rel="stylesheet" type="text/css" href="stylesheet/portfolio.css">
+        <link rel="stylesheet" type="text/css" href="css/portfolio.css">
     </head>
 
     <!--Body-->
