--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!--Background video-->
         <div id="Home">
             <video autoplay muted loop id="Typing_Video">
-                <source src="images/pexels-rodnae-productions-7914777.mp4" type="video/mp4">
+                <source src="images/Pexels Videos 2110240.mp4" type="video/mp4">
                 <!--Display message if video fails to run-->
                 Your browser does not support HTML5 video.
             </video>
@@ -54,7 +54,7 @@
         <div class="Row" id="About">
             <!--Left column-->
             <div class="Column_2">
-                <img src="images/email-gd749a105f_1280.png" alt="Email photo">
+                <img id="email" src=images/email-gd749a105f_1280.png alt="Email photo">
             </div>
             <!--Right column-->
             <div class="Column_1">
@@ -82,7 +82,7 @@
             </div>
             <!--Right column-->
             <div class="Column_2">
-                <a href="https://github.com/SulaymaanShahed" target="_blank"><img src="images/github.png" alt="GitHub Logo"></a>
+                <a href="https://github.com/SulaymaanShahed" target="_blank"><img id="githublogo" src="images/github.png" alt="GitHub Logo"></a>
             </div>
         </div>
 
@@ -90,7 +90,7 @@
         <div class="Row" id="Contact">
             <!--Contact image, left column-->
             <div class="Column_2 Column_tall">
-                <img src="images/pexels-markus-winkler-4159962.jpg" alt="Contact Image">
+                <img id="contactimg" src="images/pexels-markus-winkler-4159962.jpg" alt="Contact Image">
             </div>
             <!--Contact form, right column-->
             <div class="Column_1 Column_tall">
@@ -111,7 +111,7 @@
         <!--Footer section-->
         <footer>
             <p>
-                <p class="center">&copy Prosper Consulting Inc., <a href="https://www.learncodinganywhere.com/" target="_blank">The Tech Academy</a></p>
+                <p class="center"&copy;> Prosper Consulting Inc., <a href="https://www.learncodinganywhere.com/" target="_blank">The Tech Academy</a></p>
                 <br>
             </p>
         </footer>
