--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <!--Head-->
+    <!-- Head -->
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width" />
@@ -8,20 +8,17 @@
         <link rel="stylesheet" type="text/css" href="css/portfolio.css">
     </head>
 
-    <!--Body-->
+    <!-- Body -->
     <body class="Background">
         
-        <!--Navbar-->
+        <!-- Navbar -->
         <div class="Navbar">
             <a class="active" href="#Home">Home</a>
+            <a href="#Slideshow">Slideshow</a>
             <a href="#About">About</a>
             <a href="#GitHub">GitHub</a>
-            <a href="#Contact">Contact</a>
+            <a onclick="openForm()" ondblclick="closeForm()">Contact</a>
         </div>
-
-        <!--Breaks inserted to add space between navbar and the first heading-->
-        <br>
-        <br>
 
         <!--Background video-->
         <div id="Home">
@@ -32,7 +29,7 @@
             </video>
         </div>
 
-        <!--Video text-->
+        <!-- Video text -->
         <div class="Video_Text">
             <h1 class="white-text">Sulaymaan Shahed</h1>
             <strong>
@@ -41,13 +38,63 @@
                         <br>I believe that I will be able to bring exactly what is needed in order to make things happen
                         <br>no matter how difficult the problem.
                     </q>
-                    <br> -Sulaymaan Shahed
+                    <br> -Sulaymaan Shahed<br>
                     <br>
-                    <br> My name is Sulaymaan Shahed. Welcome to my portfolio website. On it, I will tell you about my background and experience.
+                    My name is Sulaymaan Shahed. Welcome to my portfolio website. On it, I will tell you about my background and experience.
                     <br>
                     <br> Thank you for stopping here and enjoy! 
                 </p>
             </strong>
+        </div>
+
+        <!-- Slideshow section -->
+        <div id="Slideshow">
+            <div id="Slideshow_Background">
+                <div id="Slideshow_Container">
+                    <!-- Slide 1 of 6 -->
+                    <div class="mySlides fade">
+                        <img class="Slideshow_Images" src="images/personal.png" alt="Created pic of self">
+                        <div class="text">I am available to assist you with your project!</div>
+                    </div>
+                    <!-- Slide 2 of 6 -->
+                    <div class="mySlides fade">
+                        <img class="Slideshow_Images" src="images/html-css-javascript.png" alt="HTML, CSS, and JavaScript logos">
+                        <div class="text">I am a full-stack software developer,<br> trained in:<br>HTML, CSS, JavaScript,</div>
+                    </div>
+                    <!-- Slide 3 of 6 -->
+                    <div class="mySlides fade">
+                        <img class="Slideshow_Images" src="images/Python-programming.jpg" alt="Python logo">
+                        <div class="text">the popular programming language Python,</div>
+                    </div>
+                    <!-- Slide 4 of 6 -->
+                    <div class="mySlides fade">
+                        <img class="Slideshow_Images" src="images/cheetah.jpg" alt="Image of cheetah">
+                        <div class="text">I learn fast and am going to continue to grow,</div>
+                    </div>
+                    <div class="mySlides fade">
+                        <img class="Slideshow_Images" src="images/SQL.png" alt="SQL image">
+                        <div class="text"> back end development,databases and SQL.</div>
+                    </div>
+                    <div class="mySlides fade">
+                        <img class="Slideshow_Images" src="images/work.jpg" alt="Work from home">
+                        <div class="text"><a class="white-text" onclick="openForm()" href="#Contact">Contact me now!</a></div>
+                    </div>
+                    <!-- Previous and next buttons -->
+                    <a class="Previous" onclick="plusSlides(-1)">&#10094;</a>
+                    <a class="Next" onclick="plusSlides(1)">&#10095;</a>
+                </div>
+                <br> <!--  Adds space between slideshow images and dots -->
+
+                <!-- Slideshow dots (other way for user to navigate through slideshow) -->
+                <div style="text-align: center">
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
+                    <span class="dot" onclick="currentSlide(4)"></span>
+                    <span class="dot" onclick="currentSlide(5)"></span>
+                    <span class="dot" onclick="currentSlide(6)"></span>
+                </div>
+            </div>
         </div>
 
         <!--About section-->
@@ -74,8 +121,7 @@
             <!--Left column-->
             <div class="Column_1">
                 <h1>GitHub</h1>
-                <p>
-                    You can view my coding projects on my GitHub profile here:
+                <p>You can view my coding projects on my GitHub profile here:
                     <br>
                     <p class="center"><a href="https://github.com/SulaymaanShahed" target="_blank">Sulaymaan Shahed Github</a></p>
                 </p>
@@ -86,24 +132,24 @@
             </div>
         </div>
 
-        <!--Contact section-->
-        <div class="Row" id="Contact">
-            <!--Contact image, left column-->
-            <div class="Column_2 Column_tall">
-                <img id="contactimg" src="images/pexels-markus-winkler-4159962.jpg" alt="Contact Image">
-            </div>
-            <!--Contact form, right column-->
-            <div class="Column_1 Column_tall">
-                <h1>Contact</h1>
+            <!--Contact form-->
+        <div id="Contact">
+            <button onclick="openForm()" class="Pop-Up-Button">CONTACT</button>
+            <div class="form-popup" id="myForm">                
                 <!--This specifies where and how to send the form data; we are leaving it blank-->
-                <form action="" method="POST"> <!-- Here we are utilizing a 3rd party service to submit the contact form data, insert your formspree endpoint in the action attribute -->
-                    <label>Name:</label>
-                        <input type="text" placeholder="Please enter your name here">
-                    <label>Email:</label>
-                        <input type="text" id="Email" name="Email" placeholder="Please enter your email here">
-                    <label>Message:</label>
-                        <input type="text" id="Message" name="Message" placeholder="Please write your message here">
-                        <input type="submit" value="SUBMIT">
+                <form action="" method="POST" class="form-container"> <!-- Here we are utilizing a 3rd party service to submit the contact form data -->
+                    <h1>Contact</h1>
+                    <label for="name"><b>Name</b></label>
+                        <input type="text" placeholder="Please enter your name here" name="name" required>
+                    <label for="phone"><b>Phone</b></label>
+                        <input type="text" placeholder="Type your phone number here" name="phone">    
+                    <label for="email"><b>Email</b></label>
+                        <input type="text" placeholder="Please enter your email address here" name="email" required>
+                    <label for="message"><b>Message</b></label>
+                        <input type="text" placeholder="Please write your message here" name="message">
+                        
+                    <button type="submit" class="btn">SUBMIT</button>
+                    <button type="button" class="btn cancel" onclick="closeForm()">CLOSE</button>
                 </form>
             </div>
         </div>
@@ -115,5 +161,6 @@
                 <br>
             </p>
         </footer>
+        <script src=js/port.js></script>
     </body>
 </html>
